fix: only apply white space to its first child

--- a/src/pages/Bmart/SlidePage/style.scss
+++ b/src/pages/Bmart/SlidePage/style.scss
@@ -15,7 +15,7 @@
   overflow-y: auto;
   overscroll-behavior-y: contain;
 
-  & * {
+  > * {
     white-space: initial;
   }
 
